--- a/Dauber/Dauber.csproj
+++ b/Dauber/Dauber.csproj
@@ -238,6 +238,7 @@
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Icon.png" />
     <Content Include="Images\dauberExample.gif" />
+    <Content Include="Images\poweredbyStripe.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\clientsIndex.js" />
@@ -252,6 +253,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\npm.js" />
+    <Content Include="Scripts\planChange.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
@@ -297,6 +299,7 @@
     <Content Include="Views\Shared\Info.cshtml" />
     <Content Include="Views\Clients\Edit.cshtml" />
     <Content Include="Views\MyAccount\Index.cshtml" />
+    <Content Include="Views\MyAccount\Plan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
