--- a/Dauber/bin/Dauber.dll.config
+++ b/Dauber/bin/Dauber.dll.config
@@ -20,9 +20,21 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
+    <!--<authentication mode="Forms">
+      <forms name="REDIRECT_TO_LOGIN" loginUrl="~/Account/Login"
+        protection="All" path="/" timeout="30">
+      </forms>
+    </authentication>-->
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <!--<location path="Plans/Index">
+   <system.web>
+       <authorization>
+           <allow users="*" />
+       </authorization>
+   </system.web>
+</location>-->
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
