--- a/Dauber/Dauber.csproj
+++ b/Dauber/Dauber.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MyAccountController.cs" />
     <Compile Include="Controllers\PlansController.cs" />
+    <Compile Include="Controllers\TestimonialsController.cs" />
     <Compile Include="Controllers\v1\DiaryController.cs" />
     <Compile Include="Controllers\v2\DiaryController.cs" />
     <Compile Include="Global.asax.cs">
@@ -224,6 +225,7 @@
     <None Include="Content\bootstrap.css.old" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\testimonials.css" />
     <Content Include="Content\zocial.css" />
     <Content Include="Content\zocial.svg" />
     <Content Include="favicon.ico" />
@@ -263,6 +265,7 @@
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\testimonials.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -307,6 +310,8 @@
     <Content Include="Views\MyAccount\UpdatePlan.cshtml" />
     <Content Include="Views\Plans\Index.cshtml" />
     <Content Include="Views\MyAccount\UpdateCard.cshtml" />
+    <Content Include="Views\Testimonials\Index.cshtml" />
+    <Content Include="Views\Home\TermsAndConditions.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
