--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\DAL\packages.config" />
   <repository path="..\Dauber\packages.config" />
+  <repository path="..\Fitocracy\packages.config" />
   <repository path="..\MFP\packages.config" />
 </repositories>
