--- a/Dauber/Dauber.csproj
+++ b/Dauber/Dauber.csproj
@@ -226,6 +226,7 @@
     <None Include="Content\bootstrap.css.old" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\one-page-wonder.css" />
     <Content Include="Content\testimonials.css" />
     <Content Include="Content\zocial.css" />
     <Content Include="Content\zocial.svg" />
