--- a/Dauber/Dauber.csproj
+++ b/Dauber/Dauber.csproj
@@ -228,6 +228,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\one-page-wonder.css" />
+    <Content Include="Content\sweetalert.css" />
     <Content Include="Content\testimonials.css" />
     <Content Include="Content\zocial.css" />
     <Content Include="Content\zocial.svg" />
