--- a/Dauber/Dauber.csproj
+++ b/Dauber/Dauber.csproj
@@ -250,6 +250,7 @@
     <Content Include="Images\ben.jpg" />
     <Content Include="Images\dauberExample.gif" />
     <Content Include="Images\dauberExampleBoth.gif" />
+    <Content Include="Images\dauberLogo2.png" />
     <Content Include="Images\fitocracyExample.gif" />
     <Content Include="Images\poweredbyStripe.png" />
     <Content Include="Scripts\bootstrap.js" />
