--- a/Dauber/Dauber.csproj
+++ b/Dauber/Dauber.csproj
@@ -249,12 +249,14 @@
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Icon.png" />
     <Content Include="Images\ben.jpg" />
+    <Content Include="Images\chuck.jpg" />
     <Content Include="Images\dauberExample.gif" />
     <Content Include="Images\dauberExampleBoth.gif" />
     <Content Include="Images\dauberFitoExampleSheet.png" />
     <Content Include="Images\dauberLogo2.png" />
     <Content Include="Images\dauberMFPExampleSheet.png" />
     <Content Include="Images\fitocracyExample.gif" />
+    <Content Include="Images\MyTransformation.jpg" />
     <Content Include="Images\poweredbyStripe.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -325,6 +327,7 @@
     <Content Include="Views\Testimonials\Index.cshtml" />
     <Content Include="Views\Home\TermsAndConditions.cshtml" />
     <Content Include="Views\Clients\Tutorial.cshtml" />
+    <Content Include="Views\Home\About.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
